--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ body::-webkit-scrollbar {
     display: flex;
     /*background: rgb(34,193,195);*/
     background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(45,253,212,0.0985644257703081) 100%);
+    height: auto;
+    max-height: 200px;
 }
 
 .logo-head img {
@@ -107,6 +109,11 @@ a:hover {
 }
 
 .first-container {
+    position: absolute;
+    top: 75px;
+    left: 0px ;
+    width: 150px;
+    height: 400px;
     max-width: 250px;
     background-color: rgb(34,193,195, 70%);
     border-radius: 1pc 5pc 5pc 1pc;
@@ -114,8 +121,19 @@ a:hover {
     box-shadow: 2px 2px 5px 2px white;
 }
 
-.first-container p {
+/* .first-container p {
+} */
+
+.second-container {
+    position: absolute;
+    top: 75px;
+    left: 250px;
+    width: 150px;
+    max-width: 250px;
+    background-color: rgb(34,193,195, 70%);
     border-radius: 1pc 5pc 5pc 1pc;
+    padding: 3pc;
+    box-shadow: 2px 2px 5px 2px white;
 }
 
     ----/*portfolio's style*/----
